--- a/style.css
+++ b/style.css
@@ -7,5 +7,6 @@
 body {
     display: flex;
     justify-content: center;
-    align-items: center;min-height: ;
+    align-items: center;
+    min-height: ;
 }
