--- a/style.css
+++ b/style.css
@@ -8,6 +8,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    min-height: 100vh;overflow: ;
     background: #001f25;
 }
