--- a/style.css
+++ b/style.css
@@ -9,6 +9,6 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    overflow: ;
+    overflow: hidden;
     background: #001f25;
 }
