--- a/style.css
+++ b/style.css
@@ -33,5 +33,6 @@ body {
     top: 0;
     left: 0;
     width: 25px;
-    height: 25px;background: transparent;
+    height: 25px;
+    background: transparent;
 }
