--- a/style.css
+++ b/style.css
@@ -34,5 +34,6 @@ body {
     left: 0;
     width: 25px;
     height: 25px;
-    background: transparent;border: ;
+    background: transparent;
+    border: ;
 }
