--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
     left: 0;
     width: 25px;
     height: 25px;
-    border-radius: ;
+    border-radius: 50%;
     background: transparent;
     border: 4px solid #00efff;
 }
