--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    transform: rotate(calc);
+    transform: rotate(calc());
 }
 
 .loader span::before {
