--- a/style.css
+++ b/style.css
@@ -38,5 +38,5 @@ body {
     border-radius: 50%;
     background: transparent;
     border: 4px solid #00efff;
-    border: 4px solid #00efff;
+    box-shadow: 4px solid #00efff;
 }
