--- a/style.css
+++ b/style.css
@@ -38,5 +38,6 @@ body {
     border-radius: 50%;
     background: transparent;
     border: 4px solid #00efff;
-    box-shadow: 0 0 20px #00efff, -30px -30px 0 #00efff;
+    box-shadow: 0 0 20px #00efff, 
+    -30px -30px 0 #00efff;
 }
