--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
     border: 4px solid #00efff;
     box-shadow: 0 0 20px #00efff,
         -30px -30px 0 #00efff,
-        -30px -30px 20 #00efff,
+        -30px -30px 20px #00efff,
         30px -30px 0 #00efff,
         30px -30px 0 #00efff;
 }
