--- a/style.css
+++ b/style.css
@@ -42,5 +42,6 @@ body {
         -30px -30px 0 #00efff,
         -30px -30px 20px #00efff,
         30px 30px 0 #00efff,
-        30px 30px 20px #00efff, ;
+        30px 30px 20px #00efff, -30px -30px 0 #00efff,
+        -30px -30px 0 #00efff;
 }
