--- a/style.css
+++ b/style.css
@@ -37,7 +37,8 @@ body {
     height: 25px;
     border-radius: 50%;
     background: transparent;
-    border: 4px solid #00efff;box-sizing: ;
+    border: 4px solid #00efff;
+    box-sizing: ;
     box-shadow: 0 0 20px #00efff,
         -30px -30px 0 #00efff,
         -30px -30px 20px #00efff,
