--- a/style.css
+++ b/style.css
@@ -47,5 +47,5 @@ body {
         30px -30px 0 #00efff,
         30px -30px 0 #00efff,
         -30px 30px 0 #00efff,
-        -30px 30px 0 #00efff;
+        -30px 30px 0 #00efff;animation: ;
 }
