--- a/style.css
+++ b/style.css
@@ -48,5 +48,5 @@ body {
         30px -30px 0 #00efff,
         -30px 30px 0 #00efff,
         -30px 30px 0 #00efff;
-    animation: animate 5s;
+    animation: animate 5s linear;
 }
