--- a/style.css
+++ b/style.css
@@ -49,4 +49,6 @@ body {
         -30px 30px 0 #00efff,
         -30px 30px 0 #00efff;
     animation: animate 5s linear infinite;
-}@keyframes
+}
+
+@keyframes
