--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
 
 @keyframes animate {
     0% {
-        transform: rotate();
+        transform: rotate(0deg);
         filter: hue-rotate(0deg);
     }
 
