--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
         filter: hue-rotate(0deg);
     }
 
-    100% {
+    100% {transform: rotate(0deg);
         filter: hue-rotate(360deg);
     }
 }
