--- a/style.css
+++ b/style.css
@@ -48,7 +48,8 @@ body {
         30px -30px 0 #00efff,
         -30px 30px 0 #00efff,
         -30px 30px 0 #00efff;
-    animation: animate 5s linear infinite;transform-origin: ;
+    animation: animate 5s linear infinite;
+    transform-origin: ;
 }
 
 @keyframes animate {
