--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
         -30px 30px 0 #00efff,
         -30px 30px 0 #00efff;
     animation: animate 5s linear infinite;
-    transform-origin: ;
+    transform-origin: 20px;
 }
 
 @keyframes animate {
